--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="container">
             <h2 class="log">
-                nokoSocial
+                Zee Social
             </h2>
             <div class="search-bar">
                 <i class="uil uil-search"></i>
@@ -27,7 +27,7 @@
             <div class="create">
                 <label class="btn btn-primary" for="create-post">Create</label>
                 <div class="profile-photo">
-                    <img src="./imagess/profile-1.jpg" alt="profile picture">
+                    <img src="./imagess/profile-8.jpg" alt="profile picture">
 
                 </div>
             </div>
@@ -41,12 +41,12 @@
             <div class="left">
                 <a class="profile">
                     <div class="profile-photo">
-                        <img src="./imagess/profile-1.jpg" alt="profile picture">
+                        <img src="./imagess/profile-8.jpg" alt="profile picture">
                     </div>
                     <div class="handle">
-                        <h4>Dani aye</h4>
+                        <h4>Zee aye</h4>
                         <p class="text-muted">
-                            @dayi
+                            @zee
                         </p>
                     </div>
 
@@ -771,14 +771,14 @@
 
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./imagess/profile-13.jpg" alt="">
+                                <img src="./imagess/profile-9.jpg" alt="">
                             </div>
 
                             <div>
                                 <!-- name of sender -->
-                                <h5> Ali Akbar</h5>
+                                <h5>Hamxa</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    9+ mutual friends
                                 </p>
                             </div>
                         </div>
@@ -796,14 +796,14 @@
 
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./imagess/profile-13.jpg" alt="">
+                                <img src="./imagess/profile-14.jpg" alt="">
                             </div>
 
                             <div>
                                 <!-- name of sender -->
-                                <h5> Ali Akbar</h5>
+                                <h5>Fani X</h5>
                                 <p class="text-muted">
-                                    8 mutual friends
+                                    2 mutual friends
                                 </p>
                             </div>
                         </div>
@@ -821,12 +821,12 @@
 
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./imagess/profile-13.jpg" alt="">
+                                <img src="./imagess/profile-10.jpg" alt="">
                             </div>
 
                             <div>
                                 <!-- name of sender -->
-                                <h5> Ali Akbar</h5>
+                                <h5>Zirwa</h5>
                                 <p class="text-muted">
                                     8 mutual friends
                                 </p>
