--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <div class="profile-photo">
                         <img src="./imagess/profile-8.jpg" alt="">
                     </div>
-                    <input type="text" placeholder="what is in your mind,Daniel?" id="create-post">
+                    <input type="text" placeholder="what is in your mind,Zee?" id="create-post">
                     <input type="submit" value="Post" class="btn btn-primary">
                 </form>
                 <!-- feed posttttttttttttttttttttttttttttttttttttttttttttt sectionnnnnnnnnnnnnnnnnnnnnnn -->
