--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="container">
             <h2 class="log">
-                Zee Social
+                Xee Social
             </h2>
             <div class="search-bar">
                 <i class="uil uil-search"></i>
@@ -44,9 +44,9 @@
                         <img src="./imagess/profile-8.jpg" alt="profile picture">
                     </div>
                     <div class="handle">
-                        <h4>Zee aye</h4>
+                        <h4>Xee Lee</h4>
                         <p class="text-muted">
-                            @zee
+                            @Xee
                         </p>
                     </div>
 
@@ -254,7 +254,7 @@
                     <div class="profile-photo">
                         <img src="./imagess/profile-8.jpg" alt="">
                     </div>
-                    <input type="text" placeholder="what is in your mind,Zee?" id="create-post">
+                    <input type="text" placeholder="what is in your mind,Xee?" id="create-post">
                     <input type="submit" value="Post" class="btn btn-primary">
                 </form>
                 <!-- feed posttttttttttttttttttttttttttttttttttttttttttttt sectionnnnnnnnnnnnnnnnnnnnnnn -->
